results/SVCOMP/conversational/log-ExSymExeI2D-2024_03_12_18_48_51.txt
class Main {

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x > 0 && \result == test(x);
    //@ ensures !\result ==> x <= 0;
    public static boolean main(int x) {
        x = x > 0 ? x % 10 : -(x % 10);

        Main inst = new Main();
        return inst.test(x);
    }

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> res > 0;
    //@ ensures !\result ==> res <= 0;
    public boolean test(int x) {
        double res = (double) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:4: error: non-static method test(int) cannot be referenced from a static context
    //@ ensures \result ==> x > 0 && \result == test(x);
                                                ^
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:14: error: cannot find symbol
    //@ ensures \result ==> res > 0;
                            ^
  symbol:   variable res
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:15: error: cannot find symbol
    //@ ensures !\result ==> res <= 0;
                             ^
  symbol:   variable res
  location: class Main
3 errors

class Main {

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x > 0 && \result == test(x);
    //@ ensures !\result ==> x <= 0;
    public static boolean main(int x) {
        x = x > 0 ? x % 10 : -(x % 10);

        Main inst = new Main();
        return inst.test(x);
    }

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x + 1 > 0;
    //@ ensures !\result ==> x + 1 <= 0;
    public boolean test(int x) {
        double res = (double) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:4: error: non-static method test(int) cannot be referenced from a static context
    //@ ensures \result ==> x > 0 && \result == test(x);
                                                ^
1 error

class Main {

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x > 0 && \result == inst.test(x);
    //@ ensures !\result ==> x <= 0;
    public static boolean main(int x) {
        x = x > 0 ? x % 10 : -(x % 10);

        Main inst = new Main();
        return inst.test(x);
    }

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x + 1 > 0;
    //@ ensures !\result ==> x + 1 <= 0;
    public boolean test(int x) {
        double res = (double) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:4: error: cannot find symbol
    //@ ensures \result ==> x > 0 && \result == inst.test(x);
                                                ^
  symbol:   variable inst
  location: class Main
1 error

class Main {

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x > 0 && \result == this.test(x);
    //@ ensures !\result ==> x <= 0;
    public static boolean main(int x) {
        x = x > 0 ? x % 10 : -(x % 10);

        Main inst = new Main();
        return inst.test(x);
    }

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x + 1 > 0;
    //@ ensures !\result ==> x + 1 <= 0;
    public boolean test(int x) {
        double res = (double) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:4: error: non-static variable this cannot be referenced from a static context
    //@ ensures \result ==> x > 0 && \result == this.test(x);
                                                ^
1 error

class Main {

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x > 0 && \result == test(x);
    //@ ensures !\result ==> x <= 0;
    public static boolean main(int x) {
        x = x > 0 ? x % 10 : -(x % 10);

        Main inst = new Main();
        return inst.test(x);
    }

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x + 1 > 0;
    //@ ensures !\result ==> x + 1 <= 0;
    public boolean test(int x) {
        double res = (double) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:4: error: non-static method test(int) cannot be referenced from a static context
    //@ ensures \result ==> x > 0 && \result == test(x);
                                                ^
1 error

class Main {

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x > 0 && \result == new Main().test(x);
    //@ ensures !\result ==> x <= 0;
    public static boolean main(int x) {
        x = x > 0 ? x % 10 : -(x % 10);

        Main inst = new Main();
        return inst.test(x);
    }

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x + 1 > 0;
    //@ ensures !\result ==> x + 1 <= 0;
    public boolean test(int x) {
        double res = (double) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:4: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> x > 0 && \result == new Main().test(x);
                                                ^
1 error

class Main {

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x > 0 && \result == new Main().test(x);
    //@ ensures !\result ==> x <= 0;
    public static boolean main(int x) {
        x = x > 0 ? x % 10 : -(x % 10);

        Main inst = new Main();
        return inst.test(x);
    }

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x + 1 > 0;
    //@ ensures !\result ==> x + 1 <= 0;
    public boolean test(int x) {
        double res = (double) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:4: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> x > 0 && \result == new Main().test(x);
                                                ^
1 error

class Main {

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x > 0 && \result == test(x);
    //@ ensures !\result ==> x <= 0;
    public static boolean main(int x) {
        x = x > 0 ? x % 10 : -(x % 10);

        Main inst = new Main();
        return inst.test(x);
    }

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x + 1 > 0;
    //@ ensures !\result ==> x + 1 <= 0;
    public boolean test(int x) {
        double res = (double) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:4: error: non-static method test(int) cannot be referenced from a static context
    //@ ensures \result ==> x > 0 && \result == test(x);
                                                ^
1 error

class Main {

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x > 0 && \result == new Main().test(x);
    //@ ensures !\result ==> x <= 0;
    public static boolean main(int x) {
        x = x > 0 ? x % 10 : -(x % 10);

        Main inst = new Main();
        return inst.test(x);
    }

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x + 1 > 0;
    //@ ensures !\result ==> x + 1 <= 0;
    public boolean test(int x) {
        double res = (double) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:4: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> x > 0 && \result == new Main().test(x);
                                                ^
1 error

class Main {

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x > 0 && \result == test(x);
    //@ ensures !\result ==> x <= 0;
    public static boolean main(int x) {
        x = x > 0 ? x % 10 : -(x % 10);

        Main inst = new Main();
        return inst.test(x);
    }

    //@ requires x > 0 || x < 0;
    //@ ensures \result ==> x + 1 > 0;
    //@ ensures !\result ==> x + 1 <= 0;
    public boolean test(int x) {
        double res = (double) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:4: error: non-static method test(int) cannot be referenced from a static context
    //@ ensures \result ==> x > 0 && \result == test(x);
                                                ^
1 error

